# dig-tool

./: .gitignore  Plans.txt  README.md  build.py  compile.py  main.py  pyproject.toml  requirements.txt  settings.py  ui_components.py  utils.py
.github/workflows/: build-release-alt.yml  build-release-nuitka.yml  build-release-pyinstaller.yml  build-release.yml
core/: automation.py  detection.py  initialization.py  notifications.py  ocr.py  roblox_status.py
core/automation/: __init__.py  auto_sell.py  auto_shovel.py  automation_manager.py  movement.py  pattern_manager.py  roblox_status.py  shift_manager.py
dig-tool-beta/: main.py
dig-tool-beta/.github/workflows/: build-release-alt.yml
dig-tool-beta/interface/: main_window.py  settings.py
dig-tool-beta/utils/: system_utils.py
docs/: SETTINGS.md  TECHNICAL.md  USAGE.md
interface/: components.py  custom_pattern_window.py  export_options_dialog.py  main_window.py  settings.py  settings_feedback_window.backup.py  settings_feedback_window.py
interface/custom_pattern_window/: __init__.py  main_window.py  pattern_display.py  pattern_operations.py  preview_manager.py  recording_manager.py  ui_components.py
interface/debug_logger_window/: __init__.py  main_window.py  search_operations.py  ui_components.py
interface/settings_feedback_window/: __init__.py  main_window.py  progress_operations.py  ui_components.py  window_management.py
scripts/: build.py  setup.py
utils/: config_management.py  debug_logger.py  input_management.py  item_area_selection.py  money_area_selection.py  ocr_integration.py  pattern_utils.py  screen_capture.py  system_utils.py  thread_utils.py  ui_management.py
